--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <title>React App</title>
     <style>
-      canvas {width: 100vw; height: calc(100vh - 71px); }
+      canvas {width: 100vw; height: calc(99vh);}
     </style>
   </head>
   <body>
